<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:padding="30dp"
    >
    <EditText
        android:id="@+id/add_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/add_name_hint"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/add_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/add_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/add_quantity_hint"
        app:layout_constraintTop_toBottomOf="@id/add_name"
        app:layout_constraintBottom_toTopOf="@id/add_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/add_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_save_btn"
        app:layout_constraintTop_toBottomOf="@id/add_quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>