<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:padding="30dp"
    >
    <TextView
        android:id="@+id/menu_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/menu_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/menu_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_inventory_status_btn"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menu_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/menu_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_add_items_to_inventory_btn"
        app:layout_constraintTop_toBottomOf="@id/menu_list"
        app:layout_constraintBottom_toTopOf="@id/menu_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/menu_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_logout_btn"
        app:layout_constraintTop_toBottomOf="@id/menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>